Remove Moved and NotMove classes and add other minor performance improvements